<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:id="@+id/scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/scan"
        android:icon="@drawable/qr_code_scanner"/>
    <item
        android:id="@+id/my_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/my_events"
        android:icon="@drawable/baseline_event_note_24"/>
    <item
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/profile"
        android:icon="@drawable/baseline_person_outline_24"/>
</menu>