...
    <fragment
        android:id="@+id/newEventImageFragment"
        android:name="com.example.qrazyqrsrus.NewEventImageFragment"
        android:label="new_event_image_fragment"
        tools:layout="@layout/new_event_image_fragment" >
        <action
            android:id="@+id/action_newEventImageFragment_to_newEventQrFragment"
            app:destination="@id/newEventPromoQrFragment" />
        <action
            android:id="@+id/action_newEventImageFragment_to_newEventTextFragment"
            app:destination="@id/newEventEndTimeFragment" />
        <action
            android:id="@+id/action_newEventImageFragment_to_newEventFragment"
            app:destination="@id/myEventsListFragment" />
        <argument
            android:name="new_event"
            app:argType="com.example.qrazyqrsrus.Event" />
    </fragment>
    <fragment
...
